Removed productivity card stats x borders on mobile view and fixed login card heading spell error

--- a/src/app/(dashboard)/dashboard.module.css
+++ b/src/app/(dashboard)/dashboard.module.css
@@ -28,7 +28,7 @@
 }
 
 .calendar_card {
-  display: flex ;
+  display: flex;
   justify-content: center;
 }
 
@@ -77,7 +77,6 @@
   /* padding: 0 1.7rem; */
 }
 
-
 .table_card_header,
 .table_select_btn {
   display: flex;
@@ -112,7 +111,7 @@
 
   .header_date {
     font-size: var(--fs-body);
-    color: var(--clr-text-secondary)
+    color: var(--clr-text-secondary);
   }
 
   .tables_container {
@@ -121,7 +120,16 @@
 
   .chart_stats {
     display: grid;
-  grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .chart_stats_card:nth-child(3) {
+    border-left: none;
+  }
+
+  .chart_stats_card:nth-child(3),
+  .chart_stats_card:nth-child(4) {
+    border-top: none;
   }
 
   .chart_container {
